--- a/index.html
+++ b/index.html
@@ -18,29 +18,14 @@
 
   <div class="bg">
     <div class="container">
+      
       <h1>To-Do List</h1>
       <h4>Список задач</h4>
   
       <!-- Список задач -->
       <div class="list">
-        <ul>
+        <ul id="list-group">
           <li id="empty-list-item" class="empty-list-item">Список дел пуст</li>
-  
-          <li class="list-item">
-            <span class="task-title">Купить молоко</span>
-            <div>
-              <button type="button" data-action="ready" class="btn-ready">Готово</button>
-              <button type="button" data-action="delete-task" class="btn-delete">Удалить</button>
-            </div>
-          </li>
-  
-          <li class="list-item">
-            <span class="task-title task-title--done">Купить хлеб</span>
-            <div>
-              <button type="button" data-action="ready" class="btn-ready">Готово</button>
-              <button type="button" data-action="delete-task" class="btn-delete">Удалить</button>
-            </div>
-          </li>
         </ul>
       </div>
   
@@ -57,6 +42,7 @@
         </div>
       </div>
   
+
     </div>
   </div>
 
